# stdlike

./: .clang-format  CMakeLists.txt  README.md
cmake/: Testing.cmake
include/: Algorithm.hpp  Traits.hpp
include/bits/: PositiveHysteresisComparator.hpp  TypeTraits.hpp
src/: CMakeLists.txt  PositiveHysteresisComparator.cpp
test/: CMakeLists.txt  testMain.cpp
test/algorithm/: TestFindAll.cpp  TestHysteresisComparator.cpp  TestTransformIf.cpp
test/traits/: TestHasCertainMethod.cpp
